gcc/testsuite/rust/rustc/ui/parser/trait-pub-method.rs
trait Foo {
    pub fn foo();
// { dg-error ".E0449." "" { target *-*-* } .-1 }
}

fn main() {}

